public/feed/styles.css
/* ... */
.kUNwHA .quantity.buttons_added .minus {
  border-top-left-radius: 32px;
  border-bottom-left-radius: 32px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  border-color: var(--grayColorC);
  border-right: 0;
  padding-top: 5px;
}

.kUNwHA .quantity.buttons_added .plus {
  border-top-right-radius: 32px;
  border-bottom-right-radius: 32px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  border-color: var(--grayColorC);
  border-left: 0;
}

.kUNwHA .quantity.buttons_added .minus:after {
  content: "-";
  position: absolute;
  display: block;
  height: 64px;
  line-height: 64px;
  left: 16px;
  top: 0px;
  z-index: 9;
  background: transparent;
  vertical-align: middle;
}

.kUNwHA .quantity.buttons_added .plus:after {
  content: "+";
  position: absolute;
  display: block;
  height: 64px;
  line-height: 64px;
  right: 16px;
  top: 0px;
  z-index: 9;
  background: transparent;
}

.kUNwHA .quantity input::-webkit-outer-spin-button,
.kUNwHA .quantity input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  margin: 0;
}

.kUNwHA .quantity.buttons_added .minus:focus,
.kUNwHA .quantity.buttons_added .plus:focus {
  outline: none;
}

.kUNwHA .cta-btn,
.kUNwHA .vaddc {
  position: fixed;
  left: 50%;
  transform: translateX(-50%);
  bottom: 0px;
  width: 100%;
  z-index: 101;
  background: var(--bgColorA);
  /* background: -moz-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, var(--bgColorA) 50%);
  background: -webkit-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, var(--bgColorA) 50%);
  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, var(--bgColorA) 50%); */
  line-height: 1;
  padding: 8px 0 16px 0;
}

.kUNwHA .cta-btn {
  display: flex;
}

.kUNwHA .cta-btn .mbtn {
  display: block;
  text-align: center;
  margin: 0 15px;
  padding: 12px 16px;
  font-size: 1.2rem;
  z-index: 99;
  background: var(--baseColorA);
  color: var(--txtColorC);
  border-radius: 40px;
  cursor: pointer;
  text-align: center;
  flex-grow: 1;
}

.kUNwHA .cta-btn .mbtnMore {
  background: var(--baseColorA);
  color: var(--bgColorA);
  padding: 8px;
  border-radius: 50px;
  min-width: 43px;
  display: none;
  margin-right: 15px;
  cursor: pointer;
}

.kUNwHA .cta-btn .mbtnMore > svg {
  margin: auto;
}

.kUNwHA .vadd,
.kUNwHA .mdialog .add {
  display: block;
  font-size: 1.2rem;
  padding: 8px 24px;
  display: inline-block;
  background: var(--baseColorA);
  color: var(--txtColorC);
  border-radius: 40px;
  cursor: pointer;
  text-align: center;
}

.kUNwHA .vadd {
  width: 100%;
  text-align: center;
  padding: 12px 16px;
  font-size: 1.1rem;
}

.kUNwHA .overlay {
  display: none;
  position: fixed;
  z-index: 99;
  width: 100%;
  top: 0px;
  text-align: center;
  vertical-align: middle;
  height: 100%;
  opacity: 0.86;
  background: rgb(255, 255, 255);
}

/* The snackbar - position it at the bottom and in the middle of the screen */
.kUNwHA .snackbar {
  visibility: hidden;
  min-width: 250px;
  margin-left: -125px;
  background-color: var(--bgColorC);
  color: var(--txtColorC);
  text-align: center;
  padding: 4px 12px;
  position: fixed;
  z-index: 1;
  left: 50%;
  top: 100px;
  border-radius: 50px;
}

/* Show the snackbar when clicking on a button (class added with JavaScript) */
.kUNwHA .snackbar.show {
  visibility: visible;
  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
  animation: fadein 0.5s, fadeout 0.5s 2.5s;
}

.kUNwHA .ptable .note,
.kUNwHA .ptable input {
  width: 100%;
  font-size: 1.2rem;
  padding: 8px 12px;
  border-radius: 4px;
  border: 1px solid var(--grayColorA);
  background: var(--bgColorA);
  color: var(--txtColorA);
}

.kUNwHA .ptable .note {
  margin-bottom: 64px;
}

.kUNwHA .ptable input {
  margin-bottom: 16px;
}

.kUNwHA .lplayer {
  width: 100%;
  height: 300px;
  margin: auto;
  max-width: 300px;
}

.kUNwHA .loader {
  width: 100px;
  height: 100px;
  border-radius: 100%;
  position: relative;
  margin: 0 auto;
}

.kUNwHA .loader span:nth-child(1) {
  animation: opacitychange 1s ease-in-out infinite;
}

.kUNwHA .loader span:nth-child(2) {
  animation: opacitychange 1s ease-in-out 0.33s infinite;
}

.kUNwHA .loader span:nth-child(3) {
  animation: opacitychange 1s ease-in-out 0.66s infinite;
}

.kUNwHA .loader span {
  display: inline-block;
  width: 20px;
  height: 20px;
  border-radius: 100%;
  background-color: var(--baseColorA);
  margin: 35px 5px;
  opacity: 0;
}

/* bagdes */
.kUNwHA .badge {
  display: inline-block;
  padding: 0.35em 0.65em;
  font-size: 0.75em;
  line-height: 1;
  color: #fff;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.25rem;
}

.kUNwHA .btn-warning {
  color: #000;
  background-color: #ffc107;
  border-color: #ffc107;
}

.kUNwHA .btn-success {
  color: #fff;
  background-color: #198754;
  border-color: #198754;
}

.kUNwHA .btn-primary {
  color: #fff;
  background-color: #1941df;
  border-color: #1941df;
}

.kUNwHA .btn-secondary {
  color: #fff;
  background-color: #6c757d;
  border-color: #6c757d;
}

/* my account modal */
.kUNwHA table.cart-table {
  padding: 32px 0 64px;
}

.kUNwHA .cart-table .qty,
.kUNwHA .cart-table .prod {
  text-align: left;
}

.kUNwHA .cart-table .qty,
.kUNwHA .cart-table .price,
.kUNwHA .cart-table .prod {
  vertical-align: top;
}

/* my account modal */
.kUNwHA .account .lplayer {
  height: auto;
}

.kUNwHA .account .lottie-cont {
  min-height: 250px;
}

.kUNwHA .account .orders {
  margin-bottom: 64px;
}

.kUNwHA .account .accordion {
  list-style: none;
  padding: 0;
}

.kUNwHA .account .accordion .inner {
  overflow: hidden;
  display: none;
  padding: 16px;
}

.kUNwHA .account .accordion .inner.show {
  display: block;
  color: var(--txtColorA);
}

.kUNwHA .account .accordion .inner p {
  font-size: 16px;
  font-weight: 400;
  line-height: 25px;
  letter-spacing: 0.1px;
  color: #7d8794;
  display: inline-block;
  margin: 0 0 20px;
}
/* ... */

